# GameOfLife

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: README.md
configs/brain/: aion_01_s5.yaml  aion_02_economy.yaml  aion_03_economy.yaml  anima_01_frozen.yaml  anima_01_plastic.yaml  anima_03_frozen.yaml  anima_03_plastic.yaml  anima_04_frozen.yaml  anima_04_plastic.yaml  anima_05_frozen.yaml  anima_05_plastic.yaml  anima_06_frozen.yaml  anima_06_plastic.yaml  anima_07_frozen.yaml  anima_07_plastic.yaml  beta_08_dreamer.yaml  beta_09_dreamer.yaml  beta_10_dreamer.yaml  beta_11_dreamer.yaml  beta_11_nano_dreamer.yaml  beta_12_organism.yaml  dreamer.yaml  dreamer_hungry.yaml  dreamer_masked.yaml  swift_01_dreamer.yaml
configs/run/: aion_01.yaml  aion_01_2gpu.yaml  aion_02_economy.yaml  aion_03_economy.yaml  anima_01.yaml  anima_01_frozen.yaml  anima_02.yaml  anima_03.yaml  anima_03_frozen.yaml  anima_04.yaml  anima_04_frozen.yaml  anima_05.yaml  anima_05_frozen.yaml  anima_06.yaml  anima_06_frozen.yaml  anima_07.yaml  anima_07_frozen.yaml  beta_08_capacity.yaml  beta_09_conditioning.yaml  beta_10_reachability.yaml  beta_11_mortality.yaml  beta_11_nano_mortality.yaml  beta_12_organism.yaml  cloud_gpu.yaml  exp_cultural_transmission.yaml  exp_social_curiosity.yaml  local_hunger.yaml  local_m1.yaml  local_social.yaml  swift_01_local.yaml
configs/world/: anima_02.yaml  anima_03.yaml  anima_04.yaml  anima_05.yaml  anima_06.yaml  anima_07.yaml  beta_11_2x_food.yaml  beta_12_organism.yaml  default.yaml
docs/: architecture.md  beta07-gratification-plan.md  journal.md  research-questions.md  training-ops.md
docs/research_journal/: 007-gratification.md  008-capacity.md  009-conditioning.md  010-swift-nano.md  011-reachability.md  012-mortality.md  README.md  TEMPLATE.md
docs/research_journal/aion/: 001-s5-foundation.md  002-felt-economy.md  003-felt-economy-repair.md
docs/research_journal/anima/: 001-architecture-independence.md  002-hunger-deafness.md  003-audibility-package.md  004-measured-economy.md  005-economy-and-senses.md  006-level-valence.md  007-centered-valence.md
docs/research_journal/beta/: 001-buildout-soaks.md  002-survival-pressures.md  003-bush-ecology.md  004-curiosity-collapse.md  005-hunger-experiment.md  (+4 more)
docs/research_proposals/: 001-budding.md  002-plastic-valence.md  003-mortality.md  004-finitude.md  005-aion-s5.md  006-felt-economy.md
scripts/: aion_economy_screen.py  aion_stats.py  anima_stats.py  anima_valence_screen.py  anima_viability_screen.py  bench_aion_2gpu.sh  bench_aion_preflight.sh  bench_contention.py  bench_learn.py  conditioning_gym.py  provision_runpod.sh  soak.sh  start_aion_01_2gpu.sh  start_aion_2gpu.sh  sync_back.sh  sync_back_proxy.sh
(+1 files in other folders)
