[project]
name = "gameoflife"
version = "0.1.0"
description = "A persistent voxel world of robots that learn lifelong from their own experience."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "torch>=2.3",
    "rerun-sdk>=0.20",
    "pyyaml>=6.0",
    "aiohttp>=3.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
gol-run = "gol_runtime.run:main"
gol-ctl = "gol_runtime.control:main"
gol-stats = "gol_runtime.inspect:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["packages/world", "packages/brains", "packages/runtime", "packages/obs"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
mypy_path = "packages/world:packages/brains:packages/runtime:packages/obs"

[[tool.mypy.overrides]]
module = ["rerun", "rerun.*"]
ignore_missing_imports = true

# torch.distributions and Tensor.backward ship without type annotations;
# strict mode would force ignores on every call site in the dreamer modules.
[[tool.mypy.overrides]]
module = ["gol_brains.dreamer.*"]
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["packages"]
markers = ["slow: long-running smoke tests"]
